[package]
name = "icmp-ping-rs"
version = "0.0.1"
edition = "2021"
authors = ["Alexander Borodulya <alexander.borodulya@gmail.com>"]
repository = "https://github.com/alexander-borodulya/icmp-ping-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
socket2 = "0.5.1"
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8.5"
clap = { version = "4.1.6", features = ["derive"] }
thiserror = "1.0.46"
futures = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
console-subscriber = "0.1.10"

[features]
ENABLE_EMULATE_DELAY = []
